# cargo install --path . --locked --offline
# GO OFFLINE against fucking 10 sec compilation every time!
# --offline mode


[package]
name = "wasp"
version = "0.1.0"
edition = "2021" # Cargo edition! NOT package edition!

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disable all "never used" warnings
[package.metadata.clippy]
warn = false

[features]
#test = [] superfluous, just use cargo test => #[cfg(test)]
release = []
wasm = []

[dependencies]
# ⚠️ toggle OFFLINE mode!
# can't exclude dependencies from test, only with features
# https://crates.io/crates/syn Use syn to parse and manipulate Rust code.
bla = { path = "bla" } # local
syn = { version = "2.0", features = ["full","extra-traits"] }
reqwest = { version = "0.11", features = ["blocking"] }
paste = { version = "1.0.14", features = [] }
regex = "1.10.3"
wasm-ast = { version = "0.1.0", features = ["full"] } # shitty vaporware
#wasm_bindgen = "0.2.73"
wasm-bindgen = "0.2.91"
#wasmer = "4.2.5"
#wasmedge-sdk = "0.13.2" BROKEN!
wasmtime = "*"

#[test-dependencies] no such thing. it's :
[dev-dependencies]
# only compiled and included when running tests or examples


#syn = "*" # latest version
#syn = "2" # >= 2.0.0
#syn = "2.0.48"


[profile.dev]
incremental = true

[lib]
# to compile to wasm using `wasm-pack build` :
crate-type = ["cdylib", "rlib"]
#https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/hello-world.html

