# cargo install --path . --locked --offline
# GO OFFLINE against fucking 10 sec compilation every time!
# --offline mode


[package]
name = "wasp"
version = "0.1.0"
edition = "2021"  # Cargo edition! NOT package edition!

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disable all "never used" warnings
[package.metadata.clippy]
warn = false

[features]
#test = [] superfluous, just use cargo test => #[cfg(test)]
APPLE = []
EMSCRIPTEN = []
GRAFIX = []
INCLUDE_MERGER = []
LINUX = []
MICRO = []
MULTI_VALUE = []
MY_WASM = []
RUNTIME_ONLY = []
SDL = []
std = []
TRACE = []
WABT_MERGE = []
WAMR = []
WASI = []
WASM = []
WASMEDGE = []
WASMTIME = []
WEBAPP = []
release = []
wasm = []

[dependencies]
# ⚠️ toggle OFFLINE mode!
# can't exclude dependencies from test, only with features
# https://crates.io/crates/syn Use syn to parse and manipulate Rust code.
anyhow = "1.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-ast = { version = "0.1.0", features = ["full"] } # shitty vaporware
#wast = "*"
wat = "*"
wasmparser = "*"
wasm-encoder = "*"
log = "0.4.29"
#fetch = "0.8.1"
#num-bigint = "0.4.6"
ureq = "3.1.4"
once_cell = "1.21.3"

[target.'cfg(not(target_os = "wasm32"))'.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
reqwest = { version = "0.13.1", features = ["blocking"] }

#wasm-bindgen = "0.2.91"

#wasmer = "4.2.5"
#wasmedge-sdk = "0.13.2" BROKEN!

#binaryen = "*" # 0.12.0 C++ compiler and toolchain infrastructure library for WebAssembly.
#It exposes an API for parsing and generating WebAssembly modules, and a set of tools for interacting with them.
#wabt = "0.2.0" # C++ WebAssembly Binary Toolkit, exposes only wasm2wat wat2wasm DEAD (2023-02)

wasmtime = "40.0.0"
#wasmtime-runtime = "*" # Wasmtime runtime
#wasmtime-wasi = "*" # WASI support for Wasmtime
#wasmtime-wast = "*" # Wast support for Wasmtime
#wasmtime-environ = "*" # Wasmtime environment
#wasmtime-obj = "*" # Wasmtime object file
#wasmtime-objdump = "*" # Wasmtime object file dumper
#wasmtime-profiling = "*" # Wasmtime profiling
#wasmtime-wasi-common = "*" # WASI common support for Wasmtime
#wasmtime-jit = "*" # JIT compiler for Wasmtime
#wasmtime-wiggle = "*" # Wiggle support for Wasmtime

#wasm-builder = "*" #Wasm builder is a utility for building a rust project as a Wasm binary

parity-wasm = "*" # Low-level WebAssembly format library for serializing, deserializing, and building .wasm binaries.
#Good support for well-known custom sections, such as the "names" section and "reloc.WHATEVER" sections.
# parity-wasm is INCOMPLETE: pub enum Type { Function(FunctionType),

wasmparser = "*" # A WebAssembly binary format parser


#[test-dependencies] no such thing. it's :
[dev-dependencies]
# only compiled and included when running tests or examples


#syn = "*" # latest version
#syn = "2" # >= 2.0.0
#syn = "2.0.48"


[profile.dev]
incremental = true
# Maximum build speed optimizations
opt-level = 0          # No optimization for faster compile
debug = 0              # Minimal debug info for faster compile
split-debuginfo = "unpacked"  # Faster on macOS
codegen-units = 16     # Rust default (256 was wasteful)

[profile.test]
inherits = "dev"       # Use dev profile for tests

[profile.release]
incremental = false    # Release doesn't need incremental
opt-level = 3
lto = "thin"           # Thin LTO for faster release builds

[lib]
# to compile to wasm using `wasm-pack build` :
crate-type = ["cdylib", "rlib"]
#https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/hello-world.html
